# intopt

./: Cargo.toml  README.md
examples/: 3x3.ilp  4x4.ilp  6x6.ilp  boolean-sat.ilp  independent-set.ilp  knapsack-01.ilp  knapsack-unbounded.ilp  subset-sum.ilp  triangle.ilp  unbounded.ilp  vertex-cover.ilp
src/: ilp.pest  main.rs
src/ilp/: discrepancy.rs  graph.rs  mod.rs  parser.rs  steinitz.rs
