[package]
name = "intopt"
version = "0.9.2"
authors = ["Tim Weißenfels <tim.weissenfels@stu.uni-kiel.de>"]
description = "A solver for integer linear programs (ILPs)."
repository = "https://github.com/tim-we/intopt"
edition = "2018"

[dependencies]
num-traits = "0.2"
hashbrown = "0.7"
clap = "2.33"
pest = "2.1"
pest_derive = "2.1"
matches = "0.1"
ignore-result = "0.2"
